Closed
Bug 1393123
Opened 8 years ago
Closed 8 years ago
Startup profiling hits an assertion in debug builds when dispatching a CheckResponsivenessEvent
Categories
(Core :: Gecko Profiler, defect)
Core
Gecko Profiler
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox57 | --- | fixed |
People
(Reporter: mstange, Assigned: mstange)
References
Details
Attachments
(1 file)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8900360 [details]
Bug 1393123 - Don't attempt to dispatch a runnable before the main thread is known to the thread manager.
https://reviewboard.mozilla.org/r/171722/#review177636
Attachment #8900360 -
Flags: review?(wmccloskey) → review+
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/b15dbd38e140
Don't attempt to dispatch a runnable before the main thread is known to the thread manager. r=billm
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in
before you can comment on or make changes to this bug.
Description
•