Bug 1393123 - Don't attempt to dispatch a runnable before the main thread is known to the thread manager. r=billm

MozReview-Commit-ID: FO2tDQJBGAl

--HG--
extra : rebase_source : 7bb73064a706b4c42263bfe62dc4738fe2f176fc